Styled body and footer

--- a/code/index.html
+++ b/code/index.html
@@ -33,23 +33,111 @@
 
     <section class="big-news">
       <!-- The big news content -->
+      <div class="big-child big-photo">
+        <img src="./images/coffee.jpg" class="big-photo-img" alt="a cup of coffee with a shadow">
+      </div>  
+      <div class="big-child big-story">
         <h3>The Big News Story</h3>
-        <img src="./images/coffee.jpg" class="big-photo" alt="a cup of coffee with a shadow">
         <p>The Story: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at ex lobortis, interdum elit ut, rhoncus eros. Mauris et nisl venenatis nisl fringilla lobortis. Mauris at est pulvinar, pellentesque arcu eu, lacinia enim. Integer non tincidunt ipsum, ut fringilla nunc. Phasellus blandit, dolor et pulvinar laoreet, lacus neque dapibus ante, non efficitur orci massa quis odio. Morbi finibus elementum ligula in dictum. Vestibulum nec iaculis lorem. In aliquet lectus nec vestibulum imperdiet. Suspendisse potenti.
         </p>
-        <button>Read More</button>
+        <button><a href="readmore.asp">Read More</a></button>
+      </div>
      </section>
 
     <section class="other-news">
       <!-- The other news  -->
-      <h3>The Rest of the News</h3>
-      <div class="other-child">☕️</div>
-      <div class="other-child">☕️</div>
-      <div class="other-child">☕️</div>
-      <div class="other-child">☕️</div>
+      <div class="other-child">
+        <img src="./images/cocoa.jpg" class="other-photo-img" alt="a mug with cocoa">
+        <h3>News Story</h3>
+        <p>The Story: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at ex lobortis, interdum elit ut, rhoncus eros.
+        </p>
+        <button><a href="readmore.asp">More</a></button>
+      </div>
+      <div class="other-child">
+        <img src="./images/tea.jpg" class="other-photo-img" alt="a mug with tea">
+        <h3>News Story</h3>
+        <p>The Story: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at ex lobortis, interdum elit ut, rhoncus eros.
+        </p>
+        <button><a href="readmore.asp">More</a></button>
+      </div>
+      <div class="other-child">
+        <img src="./images/ice-tea.jpg" class="other-photo-img" alt="a clear glass with tea">
+        <h3>News Story</h3>
+        <p>The Story: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at ex lobortis, interdum elit ut, rhoncus eros.
+        </p>
+        <button><a href="readmore.asp">More</a></button>
+      </div>
+      <div class="other-child">
+        <img src="./images/coffee.jpg" class="other-photo-img" alt="a cup of coffee">
+        <h3>News Story</h3>
+        <p>The Story: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at ex lobortis, interdum elit ut, rhoncus eros.
+        </p>
+        <button><a href="readmore.asp">More</a></button>
+      </div>
+      <div class="other-child">
+        <img src="./images/cocoa.jpg" class="other-photo-img" alt="a mug with cocoa">
+        <h3>News Story</h3>
+        <p>The Story: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at ex lobortis, interdum elit ut, rhoncus eros.
+        </p>
+        <button><a href="readmore.asp">More</a></button>
+      </div>
+      <div class="other-child">
+        <img src="./images/tea.jpg" class="other-photo-img" alt="a mug with tea">
+        <h3>News Story</h3>
+        <p>The Story: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at ex lobortis, interdum elit ut, rhoncus eros.
+        </p>
+        <button><a href="readmore.asp">More</a></button>
+      </div>
+      <div class="other-child">
+        <img src="./images/ice-tea.jpg" class="other-photo-img" alt="a clear glass with tea">
+        <h3>News Story</h3>
+        <p>The Story: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at ex lobortis, interdum elit ut, rhoncus eros.
+        </p>
+        <button><a href="readmore.asp">More</a></button>
+      </div>
+      <div class="other-child">
+        <img src="./images/coffee.jpg" class="other-photo-img" alt="a cup of coffee">
+        <h3>News Story</h3>
+        <p>The Story: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at ex lobortis, interdum elit ut, rhoncus eros.
+        </p>
+        <button><a href="readmore.asp">More</a></button>
+      </div>
+      <div class="other-child">
+        <img src="./images/cocoa.jpg" class="other-photo-img" alt="a mug with cocoa">
+        <h3>News Story</h3>
+        <p>The Story: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at ex lobortis, interdum elit ut, rhoncus eros.
+        </p>
+        <button><a href="readmore.asp">More</a></button>
+      </div>
+      <div class="other-child">
+        <img src="./images/tea.jpg" class="other-photo-img" alt="a mug with tea">
+        <h3>News Story</h3>
+        <p>The Story: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at ex lobortis, interdum elit ut, rhoncus eros.
+        </p>
+        <button><a href="readmore.asp">More</a></button>
+      </div>
+      <div class="other-child">
+        <img src="./images/ice-tea.jpg" class="other-photo-img" alt="a clear glass with tea">
+        <h3>News Story</h3>
+        <p>The Story: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at ex lobortis, interdum elit ut, rhoncus eros.
+        </p>
+        <button><a href="readmore.asp">More</a></button>
+      </div>
+      <div class="other-child">
+        <img src="./images/coffee.jpg" class="other-photo-img" alt="a cup of coffee">
+        <h3>News Story</h3>
+        <p>The Story: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at ex lobortis, interdum elit ut, rhoncus eros.
+        </p>
+        <button><a href="readmore.asp">More</a></button>
+      </div>
     </section>
     <footer>
-     <p>Contact Us</p>
+        <ul>
+          <li><a href="shop.asp">Shop</a></li>
+          <li><a href="contact.asp">Contact Us</a></li>
+        </ul>
     </footer>
   </body>
 </html>
+
+
