fix of css responsivnes

--- a/code/index.html
+++ b/code/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>The Void</title>
+    <title>Space News</title>
     <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
@@ -11,15 +11,13 @@
     <link rel="icon" type="image/x-icon" href="/code/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
-      <h2>THE VOID</h2>
+      <h2>Space News</h2>
       <a class="toggle-nav" onclick="toggleNavigation()">
         <i class="fa fa-bars"></i>
       </a>
-      <!-- Some kind of logo and navbar -->
       <nav role="navigation" class="navigation toggle-visibility">
         <ul>
           <li><a href="#">About</a></li>
@@ -31,7 +29,6 @@
 
     <main>
       <section class="main-news">
-        <!-- The big main content -->
         <div>
           <img
             class="main-image"
@@ -53,19 +50,13 @@
             dapibus ultrices in iaculis nunc sed augue lacus viverra. Sed
             vulputate mi sit amet mauris. Nulla at volutpat diam ut venenatis
             tellus in metus vulputate. Interdum varius sit amet mattis vulputate
-            enim nulla aliquet. Ullamcorper velit sed ullamcorper morbi
-            tincidunt ornare. Nisl suscipit adipiscing bibendum est ultricies
-            integer quis auctor. In tellus integer feugiat scelerisque. Cursus
-            euismod quis viverra nibh cras. Sed elementum tempus egestas sed
-            sed. Vitae sapien pellentesque habitant morbi tristique senectus.
-            Nec ultrices dui sapien eget mi proin.
+            enim nulla aliquet.
           </p>
           <button>CALL TO ACTION</button>
         </div>
       </section>
 
       <section class="news-headlines">
-        <!-- The other news  -->
         <div class="first-box box">
           <h2>Space</h2>
           <img
@@ -133,11 +124,7 @@
             venenatis suspendisse et ultrices non. Pellentesque senectus enim
             nec amet in. Sed vulputate volutpat nulla euismod. Eget purus
             viverra quis placerat pretium. Consequat fusce tincidunt eros at
-            nullam nunc vitae consectetur pellentesque. Ultricies rhoncus
-            tincidunt tempus aliquam. Gravida sem vitae lobortis porttitor amet
-            proin maecenas sed urna. Cras malesuada amet viverra nunc. Nulla
-            ligula vivamus donec et quam sit sit. Auctor leo tortor pellentesque
-            pellentesque cras tristique pellentesque justo senectus.
+            nullam nunc vitae consectetur pellentesque.
           </p>
         </div>
         <div class="item item-b">
@@ -157,12 +144,7 @@
             Duis ultrices tempor nulla proin consectetur. Enim pellentesque
             venenatis suspendisse et ultrices non. Pellentesque senectus enim
             nec amet in. Sed vulputate volutpat nulla euismod. Eget purus
-            viverra quis placerat pretium. Consequat fusce tincidunt eros at
-            nullam nunc vitae consectetur pellentesque. Ultricies rhoncus
-            tincidunt tempus aliquam. Gravida sem vitae lobortis porttitor amet
-            proin maecenas sed urna. Cras malesuada amet viverra nunc. Nulla
-            ligula vivamus donec et quam sit sit. Auctor leo tortor pellentesque
-            pellentesque cras tristique pellentesque justo senectus.
+            viverra quis placerat pretium.
           </p>
         </div>
       </section>
@@ -172,5 +154,5 @@
       <p>🚀</p>
     </footer>
   </body>
-  <script src="/code/scripts.js"></script>
+  <script src="./scripts.js"></script>
 </html>
