formatted navbar and started other sections

--- a/code/index.html
+++ b/code/index.html
@@ -11,26 +11,39 @@
       <!-- Some kind of logo and navbar -->
       <div class="navbar">
         <nav>
-          <section class="flex-parent">
-            <img class="flex-child-image"src="./chocolate-logo.jpg" alt="Chocolate-logo">
-            <h1 class = "flex-child-logo-title">The Chocolate Post</h1>
+          <section class ="flex-parent-logo">
+            <img class ="flex-child-image"src="./chocolate-logo.jpg" alt="Chocolate-logo">
+            <h1 class ="flex-child-logo-title">The Chocolate Post</h1>
           </section>
-          <ul class = "list">
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">News</a></li>
+          <ul class = "nav_links">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">News</a></li>
           </ul>
           <a class ="cta" href="#"><button>Contact</button></a>
         </nav>
       </div>    
     </header>
     <body>
-    <section class="big-news">
+    <section class="grid-parent-big-news">
       <!-- The big news content -->
+      <div class="grid-item-card-picture">
+        <img src="./chocolate-cake-with-swirls.jpeg" alt ="chocolate-cake-with-swirls">
+      </div>
+      <div class="grid-item-text">
+        <h2 class="card__title">Recipe of the week</h2>
+        <p class ="card__description">This week's recipe of the week is this gorgeous cake</p>
+      </div>
+      <div class="grid-item-card-picture">
+        <img src="./chocolate-cake-with-swirls.jpeg" alt ="chocolate-cake-with-swirls">
+      </div>
     </section>
 
-    <section class="">
+    <section class="grid-parent-other-news">
       <!-- The other news  -->
+      <div class="grid-item-card-picture">
+        <img src="./chocolate-cake-with-toppings.jpeg" alt ="chocolate-cake-with-swirls">
+      </div>
     </section>
   </body>
 </html>
