started fixing the grid

--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,38 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
+    <div class="grid-parent">
+        
+        <div class="grid-item grid-header">HEADER</div> 
+        <div class="grid-item grid-big-news">BIG NEWS</div>
+        <div class="grid-item grid-other-news">OTHER NEWS</div>
+        <div class="grid-item grid-other-news">OTHER NEWS</div>
+        <div class="grid-item grid-other-news">OTHER NEWS</div>
+        <div class="grid-item grid-other-news">OTHER NEWS</div>
+        <div class="grid-item grid-other-news">OTHER NEWS</div>
+        <div class="grid-item grid-other-news">OTHER NEWS</div>
+        <div class="grid-item grid-other-news">OTHER NEWS</div>
+        <div class="grid-item grid-other-news">OTHER NEWS</div>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
+          <header>
+            <!-- Some kind of logo and navbar -->
+          </header>
+
+          <section class="big-news">
+            <!-- The big news content -->
+          </section>
+
+          <section class="">
+            <!-- The other news  -->
+          </section>
+      
+    </div>
   </body>
 </html>
