added the header with logo,name and navbar

--- a/code/index.html
+++ b/code/index.html
@@ -4,15 +4,33 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
+      
+    <!-- my header with logo, name and navbar -->
     <header>
-      <!-- Some kind of logo and navbar -->
+      <img class="logo" src="logo.png" alt="logo with mountains"/>
+      <h1>Hike the World</h1>
+      <!-- Top Navigation Menu -->
+      <div class="topnav">
+      <ul>
+        <li><a href="#Home">Home</a> </li>
+        <li><a href="#News">News</a> </li>
+        <li><a href="#Contact">Contact</a> </li>
+        <li><a href="#About">About</a> </li>
+      </ul>
+    </div>
     </header>
-
+    
     <section class="big-news">
       <!-- The big news content -->
+      <h2>All you need to know about hiking</h2>
+      <h2>In one place</h2>
+      <p>Thinking about were to go for your next hike?</p>
+      <p>We promise, you will find a lot of inspiration on this site</p>
+      <p>Doesn't matter if you want to explore the nature close</p>
+      <p>at hand or travel farther, we got you covered!</p>
     </section>
 
     <section class="">
