fix grid and flex for the small news items

--- a/code/index.html
+++ b/code/index.html
@@ -13,16 +13,16 @@
 
     <!-- Logo and navbar -->
    <header>
-    <input type="checkbox" id="nav-toggle">
-      <label for="nav-toggle" class="burger-menu">
-        <img src="./hamburger.png" alt="menu icon">
-      </label>
       <div class="logo">
       <img src="./logo.svg" alt="logo of a cat footprint">
       </div>
       <div class ="site-name">
         <h1>Daily Mews</h1>
       </div>
+      <input type="checkbox" id="nav-toggle">
+      <label for="nav-toggle" class="burger-menu">
+        <img src="./hamburger.png" alt="menu icon">
+      </label>
           <ul class="navbar">
             <li><a href="#">news</a></li>
             <li><a href="#">editorial</a></li>
@@ -33,83 +33,78 @@
   </header>
 
   <!-- Big news -->
-    <section class="big-news">
-      <div class="articleimg">
-      <img src="https://vioszabo.se/nappin200px.jpg" alt="cat looking up from an empty bowl">
-      <div class="text-wrapper">
+
+  <section class="big-news">
+      <div class="big-news-img">
+      <img src="./bowls-2-612x612.jpg"></div>
+      <div class="text-wrapper-1">
       <h2>Bowls still empty</h2>
       <p>No estimate on when refill might be expected, sources say</p>
-        </div>
       </div>
     </section>
+   
 
-    <!--Other news-->
+    <!--Other news, images to be 612x408-->
     <section class="grid-container">
-      <div class="news-item item1">
+      <div class="item1">
         <div class="articleimg">
-        <img src="https://vioszabo.se/nappin200px.jpg">
-        <div class="text-wrapper"><h2>Cat union formed</h2>
+        <img src="./20201023.jpg"></div>
+        <div class="text-wrapper-1">
+        <h2>Cat union formed</h2>
         <p>“We work hard as cats, knocking over plants and napping. We demand fair compensation” chaircat Popcorn says. "Absurd claims" according to humans</p>
       </div>
     </div>
-      </div>
+      
+     
       <div class="news-item item2">
         <div class="articleimg">
-        <img src="https://vioszabo.se/nappin200px.jpg">
+        <img src="./IMG_0630.jpg"></div>
         <div class="text-wrapper">
           <h2>Birds, why do they even exist?</h2>
-        <p>They are annoying, let's hunt them.</p>
       </div>
     </div>
-    </div>
       <div class="news-item item3">
-        <div class="articleimg">
-        <img src="https://vioszabo.se/nappin200px.jpg">
+        <div class="articleimg"></div>
+        <img src="./nap.jpg">
         <div class="text-wrapper">
           <h2>New trend: waking up at 3 for more nap time during the day</h2>
-          <p>Don't miss out on your nap times!</p>
-        </div>
       </div>
       </div>  
       <div class="news-item item4">
         <div class="articleimg">
-        <img src="https://vioszabo.se/nappin200px.jpg">
+        <img src="./20220409_115446.jpg"></div>
         <div class="text-wrapper">
           <h2>Ignore expensive toys - play with trash instead!</h2>
-          <p>Those humans have no idea what we like, do they.</p>
-        </div>
       </div>
       </div>
       <div class="news-item item5">
         <div class="articleimg">
-        <img src="https://vioszabo.se/nappin200px.jpg">
+        <img src="./IMG_0625.JPG">
+      </div>
         <div class="text-wrapper">
           <h2>Study shows most cats avoid the vet</h2>
       </div>
     </div>
-    </div>
     <div class="news-item item6">
       <div class="articleimg">
-      <img src="https://vioszabo.se/nappin200px.jpg">
+      <img src="./pexels-pixabay-39484.jpg">
+      </div>
       <div class="text-wrapper">
-        <h2>Cat tv: squirrel feeder does not dissapoint</h2>
+        <h2>Cat tv: squirrel feeder lives up to hype</h2>
     </div>
-  </div>
   </div>
   <div class="news-item item7">
     <div class="articleimg">
-    <img src="https://vioszabo.se/nappin200px.jpg">
+    <img src="./catrain-612x612.jpg"></div>
     <div class="text-wrapper">
       <h2>Weather forecast: bad</h2>
   </div>
 </div>
-</div>
 <div class="news-item item8">
   <div class="articleimg">
-  <img src="https://vioszabo.se/nappin200px.jpg">
+  <img src="./20220802.jpg"></div>
   <div class="text-wrapper">
     <h2>Latest cardboard box review</h2>
-</div>
 </div>
 </div>
     </section>
