Changed 4 columns to 2 when screen size is between 1025 - 1360px to keep text from spilling out of the containers in that screen size range.

--- a/code/index.html
+++ b/code/index.html
@@ -14,7 +14,7 @@
     <header>
       <!-- Header done using flexbox -->
       <div class="container">
-        <img class="logo" src="images/logo.svg" alt="Technigo logo">
+        <img class="logo" src="images/globe1.png" alt="Globe logo">
         
         <h1>TravelNews</h1>
       
