--- a/index.html
+++ b/index.html
@@ -20,21 +20,65 @@
        </section>
     </header>
 
-    <section class="big-news"><!--PARENT-->
+    <section class="big-news">
       <!-- The big news content -->
-      <div class="top-news-pic">
-        <img src="https://images.unsplash.com/photo-1515017671634-012cb9dc6ed0?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NzMwMTU2Njc&ixlib=rb-4.0.3&q=80"/>
-      </div>
+      <img src="https://images.unsplash.com/photo-1530035415911-95194de4ebcc?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NzMwMjg3MzM&ixlib=rb-4.0.3&q=80"/>
       <div class="top-news">
         <h1>TOP LOCATIONS FOR 2023</h1>
-        <p>Thinking about your next trip? Check out these places!</p>
+        <h2>Thinking about your next trip? Check out these places!</h2>
+        <p>This is a interesting text about surfspots that will make you want to read more.
+          This is a interesting text about surfspots that will make you want to read more.</p>
         <button type="button">INSPIRE ME</button>
-        </div>
+      </div>
+      
       
     </section>
 
-    <section class="">
+    <section class="grid-parent">
       <!-- The other news  -->
+      <div class="grid item">
+        <img src="https://images.unsplash.com/photo-1540976080898-9f223dfaf8b0?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NzMwMjg4NjM&ixlib=rb-4.0.3&q=80"/>
+        <h2>Title of the news item</h2>
+        <p>Short introduction to article.</p>
+      </div>
+      <div class="grid item">
+        <img src="https://images.unsplash.com/photo-1540976080898-9f223dfaf8b0?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NzMwMjg4NjM&ixlib=rb-4.0.3&q=80"/>
+        <h2>Title of the news item</h2>
+        <p>Short introduction to article.</p>
+      </div>
+      <div class="grid item">
+        <img src="https://images.unsplash.com/photo-1540976080898-9f223dfaf8b0?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NzMwMjg4NjM&ixlib=rb-4.0.3&q=80"/>
+        <h2>Title of the news item</h2>
+        <p>Short introduction to article.</p>
+      </div>
+      <div class="grid item">
+        <img src="https://images.unsplash.com/photo-1540976080898-9f223dfaf8b0?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NzMwMjg4NjM&ixlib=rb-4.0.3&q=80"/>
+        <h2>Title of the news item</h2>
+        <p>Short introduction to article.</p>
+      </div>
+      <div class="grid item">
+        <img src="https://images.unsplash.com/photo-1540976080898-9f223dfaf8b0?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NzMwMjg4NjM&ixlib=rb-4.0.3&q=80"/>
+        <h2>Title of the news item</h2>
+        <p>Short introduction to article.</p>
+      </div>
+      <div class="grid item">
+        <img src="https://images.unsplash.com/photo-1540976080898-9f223dfaf8b0?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NzMwMjg4NjM&ixlib=rb-4.0.3&q=80"/>
+        <h2>Title of the news item</h2>
+        <p>Short introduction to article.</p>
+      </div>
+      <div class="grid item">
+        <img src="https://images.unsplash.com/photo-1540976080898-9f223dfaf8b0?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NzMwMjg4NjM&ixlib=rb-4.0.3&q=80"/>
+        <h2>Title of the news item</h2>
+        <p>Short introduction to article.</p>
+      </div>
+      <div class="grid item">
+        <img src="https://images.unsplash.com/photo-1540976080898-9f223dfaf8b0?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NzMwMjg4NjM&ixlib=rb-4.0.3&q=80"/>
+        <h2>Title of the news item</h2>
+        <p>Short introduction to article.</p>
+      </div>
+
+
+
     </section>
   </body>
 </html>
