added big news section and started on info boxes

--- a/code/index.html
+++ b/code/index.html
@@ -23,18 +23,63 @@
     </div>
     </header>
     
-    <section class="big-news">
       <!-- The big news content -->
-      <h2>All you need to know about hiking</h2>
-      <h2>In one place</h2>
+    <section class="big-news">
+      <div class="main-text">
+      <h2>All aboout hiking!</h2>
       <p>Thinking about were to go for your next hike?</p>
-      <p>We promise, you will find a lot of inspiration on this site</p>
+      <p>What food to bring along the way?</p>
+      <p>Which shoes are best suited?</p>
+      <p>You will find a lot of inspiration here, we promise!</p>
       <p>Doesn't matter if you want to explore the nature close</p>
       <p>at hand or travel farther, we got you covered!</p>
+      </div>
+      <img src="main-news-image.jpeg" alt="Picture of hiking into sunset">
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+      <!-- The news boxes  -->
+    <section class="info-boxes">
+      <div class="box-one">
+        <h3>Our top suggestions</h3>
+        <p>Find your next adventure!</p>
+        <img src="image-box-one.jpeg" alt="Picture of trail in Portugal">
+      </div>
+      <div class="box-two">
+        <h3>City hikes</h3>
+        <p>Find trails close by</p>
+        <img src="image-box-two.jpeg" alt="Picture showing a city view">
+      </div>
+      <div class="box-three">
+      <h3>Easy and tasty receipes</h3>
+      <p>Perfect for cooking outside</p>
+      <img src="image-box-three.jpeg" alt="Picture of cooking in nature">
+      </div>
+      <div class="box-four">
+        <h3>What to bring?</h3>
+        <p>Find suggestions for packlist</p>
+        <img src="image-box-four.jpeg" alt="Picture of the essentials for 1day hike">
+      </div>
+      <div class="box-five">
+        <h3>Choosing shoes</h3>
+        <p>Get our best tips!</p>
+        <img src="image-box-five.jpeg" alt="Picture of hiking shoes">
+      </div>
+      <div class="box-six">
+        <h3>Short hikes</h3>
+        <p>Find suggestions on easier trails</p>
+        <img src="image-box-six.jpeg" alt="Picture of trail in the woods">
+      </div>
+      <div class="box-seven">
+        <h3>Mountain hikes</h3>
+        <p>Most breathtaking ones</p>
+        <img src="image-box-seven.jpeg" alt="Picture showing mountain view">
+      </div>
+      <div class="box-eight">
+        <h3>Coastal hikes</h3>
+        <p>Scenic trails along the coast</p>
+        <img src="image-box-eight.jpeg" alt="Picture of trail along coast of Italy">
+      </div>
+      <div></div>
     </section>
   </body>
 </html>
