--- a/code/index.html
+++ b/code/index.html
@@ -2,20 +2,40 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style.css"/>
     <!-- dont forget the meta tag for responsiveness -->
   </head>
+
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <!--menu tablet & desktop ; -->
+    <nav class="navbar">
+      <a href="xxx" class="logo">
+        <img src="./logo/ow-logo.svg" alt="Old women logo" class="logo-img">
+      </a>
+      <ul class="nav-links">
+        <li class="nav-item"><a href="#">read</a></li>
+        <li class="nav-item"><a href="#">good news</a></li>
+        <li class="nav-item"><a href="#">archive</a></li>
+        <li class="nav-item"><a href="#">about</a></li>
+      </ul>
+    </nav>
+
+      <!-- menu for mobile -->
+      
+
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+      <h1>kebab-party</h1>
+      <p> Test text something </p>
     </section>
 
-    <section class="">
+    <section class="articles">
       <!-- The other news  -->
     </section>
   </body>
