added some more stuff

--- a/code/index.html
+++ b/code/index.html
@@ -13,7 +13,7 @@
     <header class="header">
 
       <div class="flex-container box-1-header">
-        <img src="./logo.svg" alt="">
+       <img src="./logo.svg" alt="">
         <h1 class="title">Site name</h1>
       </div>
 
@@ -29,10 +29,11 @@
     <section class= "big-news">
     <!-- The big news content -->
         <img class="big-news-img" src="https://hodinkee.imgix.net/uploads/images/f4cd1dd5-cce8-44ba-b510-87c9cd8122d7/L1020900.jpg?ixlib=rails-1.1.0&amp;fm=jpg&amp;q=55&amp;auto=format&amp;usm=12&amp;fit=crop&amp;ch=Width%2CDPR%2CSave-Data&amp;alt=" alt="image of a watch">
-        <h3 class= "big-news-title"> We Respond To Your Comments Regarding GMTs, Rainbows, and More</h3>
+        <div class="big-news-head-text"><h3 class= "big-news-title"> We Respond To Your Comments Regarding GMTs, Rainbows, and More</h3>
         <h4 class="big-news-ingress">Your final thoughts of 2022 meet some of our first thoughts of 2023.</h4>
         <p class="big-news-text">here does the time go?? It seems like just yesterday we were all giddy with anticipation for the holiday season and taking stock of all that the year 2022 had blessed us with. Refusing to fully return to the January grind, we took..</p>
         <button class="big-news-button"> read more</button>
+      </div>
 
     </section>
 
