--- a/code/index.html
+++ b/code/index.html
@@ -31,7 +31,7 @@
     <section class="headline">
         <div class="headline-image"><a href="#"><img src="./img/big-img-1.jpg" alt="minimalist wardrobe"></a></div>
         <article class="main-article">
-          <h1><a href="#">FEATURED ARTICLE</a></h1>
+          <h1>FEATURED ARTICLE</h1>
           <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus fugit soluta odit fuga molestias, ab doloribus rem iure dolor ratione nam modi assumenda incidunt. Aperiam consequatur cupiditate fugit veniam voluptates? Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
               Delectus fugit soluta odit fuga molestias, ab doloribus rem iure dolor ratione nam modi assumenda incidunt. Aperiam consequatur cupiditate fugit veniam voluptates?
           </h3>
@@ -94,7 +94,7 @@
         
       <!--footer-->
       <footer class="main-footer">
-          <h3>Copyright &copy 2023 <a href="mailto:sammyolsson@gmail.com">Sammy</a>, <a href="www.technigo.io">Technigo</a> Boot Camp Student '23</h3>
+          <h3>Created by <a href="mailto:sammyolsson@gmail.com">Sammy</a>, <a href="www.technigo.io">Technigo</a> Boot Camp Student '23</h3>
       </footer>
 </body>
 
