Remove unnecessary lines

--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <title>Technigo News Site - Michelle Wegler</title>
   </head>
@@ -64,14 +63,39 @@
           </div>
         </div>
       </nav>
+      <h1>Catz Magazine</h1>
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+      <div class="container">
+        <div class="flex-parent-big-news">
+          <div class="flex-child-big-news">
+            <img
+              src="../img/sunSalutatingCat.jpg"
+              class="img-big-news"
+              alt="Smirre Training App"
+              title="Smirre Training"
+            />
+          </div>
+          <div class="flex-child-big-news">
+            <h2>The Latest Rage - Yoga for Cats!</h2>
+            <p>
+              Yoga Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Architecto aperiam odit sed fugit alias, distinctio molestiae
+              expedita repellendus amet impedit sint sit iure voluptatem eius
+              quisquam quam atque velit. Cumque?
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="">
       <!-- The other news  -->
+      <!-- On desktop-sized screens: four cards in a row, 
+         On tablets: two in a row, 
+        On mobile: one card on each row. -->
     </section>
     <footer>
       <div class="container">
