--- a/code/index.html
+++ b/code/index.html
@@ -15,7 +15,7 @@
             <img class ="flex-child-image"src="./chocolate-logo.jpg" alt="Chocolate-logo">
             <h1 class ="flex-child-logo-title">The Chocolate Post</h1>
           </section>
-          <ul class = "nav_links">
+          <ul class ="nav_links">
             <li><a href="#">About</a></li>
             <li><a href="#">Recipes</a></li>
             <li><a href="#">News</a></li>
@@ -27,14 +27,16 @@
     <body>
     <section class="grid-parent-big-news">
       <!-- The big news content -->
-      <div class="grid-item-big-card">
-        <img src="./chocolate-fudge-cake.jpeg" alt ="chocolate-fudge-cake">
+      <div class="grid-item-big-card-img">
+        <img src="./chocolate-cake-fudge.jpeg" alt ="chocolate-fudge-cake">
       </div>
       <div class="grid-item-big-text">
-        <h2 class="card__title">Recipe of the week</h2>
-        <h3 class ="card__description" style="padding-top:1em">Chocolate fudge cake with rich buttercream</h3>
-        <p class = "card__text" style="padding-top:1em"> This week's favourite recipe is a beautiful chocolate fudge cake with a lush buttercream topping. Taking just 35-40 minutes to bake, it's easy peasy to make (and eat!) this delectable cake! </p>
-          <a class ="click-me" href="https://www.sweetestmenu.com/chocolate-fudge-layer-cake/"><button>Bake me!</button></a>
+        <h2 class="card__title">Recipe of the Week</h2>
+        <h3 class ="card__description">Chocolate Fudge Cake with rich buttercream</h3>
+        <p> The perfect Chocolate Fudge Cake covered in a creamy, lush chocolate buttercream. Two layers of buttery, chocolate goodness, paired with the ultimate frosting and chocolate shavings - heaven!</p> 
+        <p style ="padding-top:1em"> Perfect for any occassion, it's easy-peasy to make, too!</p>
+        <p style ="padding-top: 1em">You'll be coming back for seconds in no time.</p>
+        <a class ="click-me" href="https://www.sweetestmenu.com/chocolate-fudge-layer-cake/"><button>Bake me!</button></a>
       </div>
     </section>
 
@@ -62,9 +64,31 @@
         <p>The health benefits of dark chocolate.</p>
         <a href="https://www.everydayhealth.com/diet-and-nutrition-pictures/delicious-reasons-to-eat-dark-chocolate.aspx">Teach me!</a>
       </div>
+      <div class="grid-item-card">
+        <img src="./chocolate-drink.jpeg" alt="chocolate-drink">
+        <div class="class_content">
+        <p>What alcohol pairs well with chocolate?</p>
+        <a href="https://www.toastmag.co.nz/spirits/pairing-chocolate-and-alcohol">Drink me!</a>
+        </div>
+      </div>
+      <div class="grid-item-card">
+        <img src="./vegan-chocolate.jpeg" alt="vegan-chocolate">
+        <p>Looking for vegan chocolate?</p>
+        <a href="https://vegnews.com/vegan-guides/chocolate/accidentally-vegan-chocolates">Find me!</a>
+      </div> 
+      <div class="grid-item-card">
+        <img src="./chocolate-chilli.jpeg" alt="chocolate-chilli">
+        <p>What happens when we add chilli to chocolate?</p>
+        <a href="https://www.southernliving.com/food/dish/chili/chocolate-in-chili">Spice me!</a>
+      </div>
+      <div class="grid-item-card">
+        <img src="./dark-chocolate.jpeg" alt="dark-chocolate">
+        <p>The health benefits of dark chocolate.</p>
+        <a href="https://www.everydayhealth.com/diet-and-nutrition-pictures/delicious-reasons-to-eat-dark-chocolate.aspx">Teach me!</a>
+      </div>
     </section>
     <footer>
-      <p>Class of 2023 -  Fiona Klacar</p>
+      <p>Class of 2023 - Fiona Klacar</p>
     </footer>
   </body>
 </html>
